# fastapi-template

./: app.py  pyproject.toml  requirements.txt  service.sh
